flask not working on desktop?

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +124,8 @@
     "# Get large image link\n",
     "img_large = 'https://www.jpl.nasa.gov' + str(img_large_soup.find('figure').find('a')['href'])\n",
     "\n",
+    "browser.quit()\n",
+    "\n",
     "print(img_large)"
    ]
   },
@@ -136,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,26 +149,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InSight sol 370 (2019-12-11) low -99.0ºC (-146.1ºF) high -19.5ºC (-3.0ºF)\n",
-      "winds from the SSE at 5.1 m/s (11.4 mph) gusting to 19.6 m/s (43.9 mph)\n",
-      "pressure at 6.60 hPapic.twitter.com/XqOy8yFlI6\n"
+      "InSight sol 373 (2019-12-14) low -98.1ºC (-144.6ºF) high -20.1ºC (-4.1ºF)\n",
+      "winds from the SW at 4.9 m/s (11.1 mph) gusting to 19.7 m/s (44.0 mph)\n",
+      "pressure at 6.60\n"
      ]
     }
    ],
    "source": [
     "# Crete soup object\n",
-    "soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "soup = bs(response.text, 'html.parser')\n",
     "\n",
-    "weather = soup.find('div', class_=\"js-tweet-text-container\").find('p').text\n",
+    "weather = soup.find('div', class_=\"js-tweet-text-container\").find('p').text.split('hPapic')[0].rstrip()\n",
     "\n",
     "print(weather)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['InSight',\n",
+       " 'sol',\n",
+       " '373',\n",
+       " '(2019-12-14)',\n",
+       " 'low',\n",
+       " '-98.1ºC',\n",
+       " '(-144.6ºF)',\n",
+       " 'high',\n",
+       " '-20.1ºC',\n",
+       " '(-4.1ºF)',\n",
+       " 'winds',\n",
+       " 'from',\n",
+       " 'the',\n",
+       " 'SW',\n",
+       " 'at',\n",
+       " '4.9',\n",
+       " 'm/s',\n",
+       " '(11.1',\n",
+       " 'mph)',\n",
+       " 'gusting',\n",
+       " 'to',\n",
+       " '19.7',\n",
+       " 'm/s',\n",
+       " '(44.0',\n",
+       " 'mph)',\n",
+       " 'pressure',\n",
+       " 'at',\n",
+       " '6.60']"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.find('div', class_=\"js-tweet-text-container\").find('p').text.split('hPapic')[0].rsplit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weather_parse = soup.find('div', class_=\"js-tweet-text-container\").find('p').text.split('hPapic')[0].rsplit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mars_date = weather_parse[1] + ' ' + weather_parse[2] + ' ' + weather_parse[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sol 373 (2019-12-14)'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_date"
    ]
   },
   {
@@ -178,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +367,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,6 +380,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mars_facts_df.to_html('mars_facts.html')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -301,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -313,13 +409,18 @@
     }
    ],
    "source": [
-    "# Retrieve pages, save title and img url to list as dictionaries\n",
-    "hemispheres_url_list = [\n",
-    "    'https://astrogeology.usgs.gov/search/map/Mars/Viking/cerberus_enhanced',\n",
-    "    'https://astrogeology.usgs.gov/search/map/Mars/Viking/schiaparelli_enhanced',\n",
-    "    'https://astrogeology.usgs.gov/search/map/Mars/Viking/syrtis_major_enhanced',\n",
-    "    'https://astrogeology.usgs.gov/search/map/Mars/Viking/valles_marineris_enhanced']\n",
+    "# Retrieve mars hemispheres page and create soup object\n",
+    "hemispheres_url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "response = requests.get(hemispheres_url)\n",
+    "soup = bs(response.text, 'html.parser')\n",
     "\n",
+    "# Get url for each hemisphere page\n",
+    "hemispheres_url_list = []\n",
+    "\n",
+    "for x in range(len(soup.find_all('div', class_='item'))):\n",
+    "    hemispheres_url_list.append('https://astrogeology.usgs.gov' + soup.find_all('div', class_='item')[x].find('a')['href'])\n",
+    "\n",
+    "# Create a list of dictionaries containing the title and img url for each hemisphere\n",
     "hemisphere_image_list = []\n",
     "\n",
     "for url in range(len(hemispheres_url_list)):\n",
@@ -327,7 +428,7 @@
     "    hemisphere_image_dict = {}\n",
     "    \n",
     "    response = requests.get(hemispheres_url_list[url])\n",
-    "    soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "    soup = bs(response.text, 'html.parser')\n",
     "    \n",
     "    title = soup.find('title').text.split('Enhanced')[0].rstrip()\n",
     "    img_url = soup.find('div', class_='downloads').find('a')['href']\n",
