modified twitter scrape

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -10,7 +10,8 @@
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as bs\n",
     "import pandas as pd\n",
-    "import requests"
+    "import requests\n",
+    "import time"
    ]
   },
   {
@@ -40,7 +41,10 @@
    "source": [
     "# Retrieve page\n",
     "news_url = 'https://mars.nasa.gov/news/'\n",
-    "browser.visit(news_url)"
+    "browser.visit(news_url)\n",
+    "\n",
+    "# Wait for page load\n",
+    "time.sleep(2)"
    ]
   },
   {
@@ -53,8 +57,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "    Title: NASA's Treasure Map for Water Ice on Mars\n",
-      "    Text: A new study identifies frozen water just below the Martian surface, where astronauts could easily dig it up.\n",
+      "    Title: NASA's Mars 2020 Rover Completes Its First Drive\n",
+      "    Text: In a 10-plus-hour marathon, the rover steered, turned and drove in 3-foot (1-meter) increments over small ramps.\n",
       "\n"
      ]
     }
@@ -105,14 +109,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA23579_hires.jpg\n"
+      "https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA23599_hires.jpg\n"
      ]
     }
    ],
@@ -149,111 +153,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "InSight sol 373 (2019-12-14) low -98.1ºC (-144.6ºF) high -20.1ºC (-4.1ºF)\n",
-      "winds from the SW at 4.9 m/s (11.1 mph) gusting to 19.7 m/s (44.0 mph)\n",
-      "pressure at 6.60\n"
+      "InSight sol 378 (2019-12-19) low -97.7ºC (-143.8ºF) high -20.0ºC (-3.9ºF)\n",
+      "winds from the SSE at 5.7 m/s (12.8 mph) gusting to 23.8 m/s (53.2 mph)\n",
+      "pressure at 6.50\n"
      ]
     }
    ],
    "source": [
-    "# Crete soup object\n",
+    "# Crete soup object and parse weather paragraph\n",
     "soup = bs(response.text, 'html.parser')\n",
     "\n",
-    "weather = soup.find('div', class_=\"js-tweet-text-container\").find('p').text.split('hPapic')[0].rstrip()\n",
+    "mars_weather = soup.find('div', class_=\"js-tweet-text-container\").find('p').text.split('hPapic')[0].rstrip()\n",
+    "        \n",
     "\n",
-    "print(weather)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['InSight',\n",
-       " 'sol',\n",
-       " '373',\n",
-       " '(2019-12-14)',\n",
-       " 'low',\n",
-       " '-98.1ºC',\n",
-       " '(-144.6ºF)',\n",
-       " 'high',\n",
-       " '-20.1ºC',\n",
-       " '(-4.1ºF)',\n",
-       " 'winds',\n",
-       " 'from',\n",
-       " 'the',\n",
-       " 'SW',\n",
-       " 'at',\n",
-       " '4.9',\n",
-       " 'm/s',\n",
-       " '(11.1',\n",
-       " 'mph)',\n",
-       " 'gusting',\n",
-       " 'to',\n",
-       " '19.7',\n",
-       " 'm/s',\n",
-       " '(44.0',\n",
-       " 'mph)',\n",
-       " 'pressure',\n",
-       " 'at',\n",
-       " '6.60']"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "soup.find('div', class_=\"js-tweet-text-container\").find('p').text.split('hPapic')[0].rsplit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weather_parse = soup.find('div', class_=\"js-tweet-text-container\").find('p').text.split('hPapic')[0].rsplit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mars_date = weather_parse[1] + ' ' + weather_parse[2] + ' ' + weather_parse[3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'sol 373 (2019-12-14)'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mars_date"
+    "print(mars_weather)"
    ]
   },
   {
@@ -265,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +287,7 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
